Fix sidebar overflowing link texts

--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -388,7 +388,7 @@ div.entry-value:hover {
 }
 
 div.entry {
-	padding: 5px 2px;
+	padding: 5px 5px;
 }
 
 div.entry:hover {
@@ -398,7 +398,7 @@ div.entry:hover {
 div.entry a {
   font-size: 13px;
   text-decoration: none;
-  max-width: 165px;
+  max-width: 160px;
   text-overflow: ellipsis;
   white-space: nowrap;
   display: inline-block;
